# spoticord

./: .env.example  CHANGELOG.md  COMPILING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
spoticord_audio/: Cargo.toml
spoticord_config/: Cargo.toml
spoticord_config/src/: env.rs  lib.rs
spoticord_player/: Cargo.toml
spoticord_player/src/: info.rs  lib.rs
spoticord_session/: Cargo.toml
spoticord_session/src/: error.rs  lib.rs  manager.rs  playback_embed.rs
spoticord_spotify/: Cargo.toml
spoticord_spotify/src/: lib.rs
spoticord_utils/: Cargo.toml
spoticord_utils/src/: lib.rs
src/: auth.rs  bot.rs  main.rs
src/commands/core/: mod.rs
src/commands/music/: browse.rs  dashboard.rs  jam.rs  join.rs  mod.rs  play.rs  queue.rs  repeat.rs  shuffle.rs  volume.rs
