[package]
name = "spoticord"
version = "3.1.0"
edition = "2021"
rust-version = "1.83.0"

[[bin]]
name = "spoticord"
path = "src/main.rs"

[workspace]
members = [
    "spoticord_audio",
    "spoticord_config",
    "spoticord_player",
    "spoticord_session",
    "spoticord_utils",
]

[dependencies]
spoticord_config = { path = "./spoticord_config" }
spoticord_player = { path = "./spoticord_player" }
spoticord_session = { path = "./spoticord_session" }
spoticord_utils = { path = "./spoticord_utils" }

librespot = { version = "0.8.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
anyhow = "1.0.93"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"
serenity = "0.12.2"
songbird = "0.6.0"
tokio = { version = "1.41.1", features = ["full"] }
rustls = { version = "0.23.16", features = ["aws-lc-rs"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[workspace.package]
version = "3.1.0"
