[package]
name = "spoticord_audio"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { version = "0.8.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
songbird = "0.6.0"
tokio = { version = "1.41.1", features = ["sync"], default-features = false }
zerocopy = "0.8.9"
