[package]
name = "spoticord_player"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spoticord_audio = { path = "../spoticord_audio" }
spoticord_utils = { path = "../spoticord_utils" }

librespot = { version = "0.8.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
songbird = "0.6.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
log = "0.4.22"
symphonia = { version = "0.5.4", default-features = false, features = ["pcm"] }
hex = "0.4.3"
