[package]
name = "spoticord_session"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spoticord_config = { path = "../spoticord_config" }
spoticord_player = { path = "../spoticord_player" }
spoticord_utils = { path = "../spoticord_utils" }

tokio = { version = "1.41.1", features = ["full"] }
librespot = { version = "0.8.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
serenity = "0.12.2"
songbird = "0.6.0"
anyhow = "1.0.93"
log = "0.4.22"
poise = "0.6.1"
thiserror = "2.0.3"
